Skin is almost matching the design

--- a/src/uvc/themes/dguv/static/main.css
+++ b/src/uvc/themes/dguv/static/main.css
@@ -1,11 +1,11 @@
 #content {
-  top: 60px;
+  top: 80px;
   position: relative;
 }
 
 #global-submenus {
-  position: relative;
-  top: 10px;
+  position: absolute;
+  top: 145px;
 }
 
 #navigation {
