--- a/src/uvc/themes/dguv/static/main.css
+++ b/src/uvc/themes/dguv/static/main.css
@@ -1,6 +1,26 @@
+html {
+  font-family: sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+body {
+  margin: 0;
+  background: url("bg.jpg") repeat fixed left top rgba(0, 0, 0, 0);
+}
+
 #content {
-  top: 80px;
-  position: relative;
+  padding: 1em 0.5em;
+  background: none repeat scroll 0 0 #e2eef8;
+}
+
+#body {
+  background: none repeat scroll 0 0 white;
+  width: auto;
+}
+
+#top, #top-box {
+    background-color: transparent;
 }
 
 #global-submenus {
@@ -20,50 +40,6 @@
 #navigation > li > a {
   margin-right: 0;
 }
-
-
-/*
-.form-group textarea,
-.form-group input,
-.form-group select {
-  display: block;
-  width: 100%;
-  height: 34px;
-  padding: 6px 12px;
-  font-size: 14px;
-  line-height: 1.428571429;
-  color: #555555;
-  background-color: #ffffff;
-  background-image: none;
-  border: 1px solid #cccccc;
-  border-radius: 0px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-}
-.form-group textarea:focus,
-.form-group input:focus,
-.form-group select:focus {
-  border-color: #66afe9;
-  outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
-}
-
-.form-group input:-moz-placeholder {
-  color: #999999;
-}
-
-.form-group input:-moz-placeholder {
-  color: #999999;
-  opacity: 1;
-}
-
-.form-group textarea {
-  height: auto;
-}
-*/
 
 .field-error
 .field-error input,
